// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimpleSearchComponent /> should render with custom props 1`] = `
preact-render-spy (1 nodes)
-------
<div class="as-simpleSearch custom-container-class">
  <input
    type="text"
    class="as-simpleSearch__input undefined"
    autofocus={false}
    placeholder=""
    onInput={[Function anonymous]}
    value=""
   />
</div>

`;

exports[`<SimpleSearchComponent /> should render with default props 1`] = `
preact-render-spy (1 nodes)
-------
<div class="as-simpleSearch ">
  <input
    type="text"
    class="as-simpleSearch__input "
    autofocus={false}
    placeholder=""
    onInput={[Function anonymous]}
    value=""
   />
</div>

`;
